fixed bug 129418 - MDN:Switching identity should retain request for MDN receipt options; r=ducarroz,sr=bienvenu