mailnews/compose/src/nsMsgComposeService.cpp
@@ -443,28 +443,14 @@ nsMsgComposeService::OpenComposeWindow(const char *msgComposeWindowURL, const ch
       else
         pMsgComposeParams->SetOriginalMsgURI(originalMsgURI);
         
-      PRBool requestForReturnReceipt = PR_FALSE;
-      PRBool useCustomPrefs = PR_FALSE;
+      PRBool requestReturnReceipt = PR_FALSE;
       PRInt32 receiptType = nsIMsgMdnGenerator::eDntType;
       if (identity)
-        identity->GetBoolAttribute("use_custom_prefs", &useCustomPrefs);
-      if (useCustomPrefs)
       {
-          identity->GetBoolAttribute("request_return_receipt_on",
-                                     &requestForReturnReceipt);
-          identity->GetIntAttribute("request_receipt_header_type",
-                                      &receiptType);
+        identity->GetRequestReturnReceipt(&requestReturnReceipt);
+        identity->GetReceiptHeaderType(&type);
       }
-      else
-      {
-          nsCOMPtr<nsIPref> prefs(do_GetService(NS_PREF_CONTRACTID, &rv));
-          NS_ENSURE_SUCCESS(rv, rv);
-          rv = prefs->GetBoolPref("mail.receipt.request_return_receipt_on",
-                                  &requestForReturnReceipt); 
-          rv = prefs->GetIntPref("mail.receipt.request_header_type",
-                                 &receiptType);
-      }
-      pMsgCompFields->SetReturnReceipt(requestForReturnReceipt);
+      pMsgCompFields->SetReturnReceipt(requestReturnReceipt);
       pMsgCompFields->SetReceiptHeaderType(receiptType);
 
       pMsgComposeParams->SetComposeFields(pMsgCompFields);
